--- a/styles4.css
+++ b/styles4.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #333; /* Czarny kolor tła nagłówka */
+    background-color: #333;
     color: white;
     padding: 15px 20px;
     display: flex;
@@ -57,6 +57,7 @@ nav a:hover {
 
 main {
     padding: 20px;
+    margin-bottom: 80px; /* Dodaj margines dolny, aby zrobić miejsce na stopkę */
 }
 
 /* Meble Protetyczne Section */
@@ -70,6 +71,7 @@ main {
     font-size: 32px;
     margin-bottom: 20px;
     color: #333;
+    text-align: center;
 }
 
 .furniture-grid {
@@ -84,6 +86,11 @@ main {
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     padding: 15px;
     text-align: center;
+    transition: transform 0.2s;
+}
+
+.furniture-item:hover {
+    transform: scale(1.02);
 }
 
 .furniture-img {
@@ -98,24 +105,51 @@ main {
     margin-bottom: 10px;
 }
 
-.furniture-item p {
+.furniture-details {
+    text-align: left;
     font-size: 16px;
     color: #666;
+    margin: 0 auto;
+}
+
+.furniture-description {
+    margin-bottom: 20px;
+}
+
+.furniture-description p {
+    margin: 10px 0;
+}
+
+.furniture-description ul {
+    list-style-type: disc;
+    margin: 10px 0 10px 20px;
+}
+
+.bold-label {
+    font-weight: bold;
+}
+
+.furniture-specs {
+    border-top: 1px solid #ddd;
+    padding-top: 10px;
+    margin-top: 10px;
+}
+
+.furniture-specs p {
     margin: 5px 0;
 }
 
 /* Modal */
 .modal {
-    display: none; /* Hidden by default */
+    display: none;
     position: fixed;
-    z-index: 1; /* Sit on top */
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+    overflow: auto;
+    background-color: rgba(0,0,0,0.8);
     padding-top: 60px;
 }
 
@@ -125,26 +159,15 @@ main {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 1000px; /* Ensure the modal doesn't get too wide */
-}
-
-.modal-content img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;
-}
-
-/* Grid for images inside modal */
-.modal-content {
+    max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
 }
 
 .modal-content img {
-    flex: 1 1 calc(33.333% - 20px); /* 3 images per row with space in between */
-    max-width: calc(33.333% - 20px); /* Make sure images don't overflow */
+    width: calc(33.333% - 20px);
+    border-radius: 8px;
 }
 
 .close {
